--- a/zadanie.html
+++ b/zadanie.html
@@ -8,10 +8,9 @@
 <body>
     <HEADER>
         <div class="infobox">
-    <strong></strong><br>
-    <strong></strong> <br>
-    <strong></strong><br>
-    <strong></strong>
+   <strong>SIMPLICITY:</strong>EASY FOR BEGINNERS<br>
+    <strong>RELATIONSHIP:</strong>THEY COMPLEMENT EACH OTHER<br>
+    <strong>NO COMPILETION REQIRED:</strong>HTML and CSS are interpreted directly<br>
   </div>
     <h1>HTML and CSS</h1>
     </HEADER>
