--- a/zadanie.html
+++ b/zadanie.html
@@ -6,6 +6,12 @@
   <title>zadanie</title> 
 </head>
 <body>
+    <div class="button-group">
+    <div> <button class="btn left">Main</button></div>
+        <div><button class="btn center"><a href="https://qalight.ua/ru/baza-znaniy/html-i-css-dlya-testirovshhikov/" target="_blank">Information</a></button></div>
+        <div><button class="btn right">Settings</button></div>
+    </div>
+    <div class="container"></div>
     <HEADER>
         <div class="infobox">
    <strong>SIMPLICITY:</strong>EASY FOR BEGINNERS<br>
