--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="button-group">
     <div> <button class="btn left">Main</button></div>
-        <div><button class="btn center"><a href="https://qalight.ua/ru/baza-znaniy/html-i-css-dlya-testirovshhikov/" target="_blank">Information</a></button></div>
+        <div><a href="https://qalight.ua/ru/baza-znaniy/html-i-css-dlya-testirovshhikov/" target="_blank"><button class="btn center">Information</button></a></div>
         <div><button class="btn right">Settings</button></div>
     </div>
     <div class="container"></div>
